--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Vote Fair</h1>
     
-    <div id="optionsSection">
+    <div id="optionsSection" class="section">
         <h2>Manage Options</h2>
         <input type="text" id="optionInput" placeholder="Enter an option" onkeydown="if(event.key === 'Enter') addOption()">
         <button onclick="addOption()">Add Option</button>
@@ -18,20 +18,20 @@
         <button onclick="submitOptions()">Start Voting</button>
     </div>
 
-    <div id="votingSection" style="display: none;">
+    <div id="votingSection" class="section" style="display: none;">
         <h2>Vote</h2>
-        <p>Drag and drop to rank the options. -5 is the lowest rating, 5 is the highest.</p>
+        <p>Drag and drop to rank the options. Input your rating: -5 is the lowest rating, 5 is the highest.</p>
         <label>Make a Random ID Word: </label><input id="nameInput" type="text" onkeyup="updateUID()">
-        <span id="UIDDisplay">Your UID: 0</span>
+        <br>
+        <span id="UIDDisplay">Your UID: <strong>0</strong></span>
         <ul id="voteForm"></ul>
         <button onclick="submitVote()">Submit Vote</button>
         <button onclick="finishVoting()">All votes submitted?</button>
     </div>
 
-    <div id="resultsSection" style="display: none;">
+    <div id="resultsSection" class="section" style="display: none;">
         <h2>Results</h2>
         <div id="numVotes"></div>
-        <div id="winnersContainer"></div>
         <table id="resultsTable"></table>
         <button onclick="resetVoting()">Reset Voting</button>
     </div>
