randomized voters and showed winning options

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="votingSection" class="section" style="display: none;">
         <h2>Vote</h2>
-        <p>Drag and drop to rank the options. Input your rating: -5 is the lowest rating, 5 is the highest.</p>
+        <p>Drag and drop to rank the options.<br>Input your rating: -5 is the lowest rating, 5 is the highest.</p>
         <label>Make a Random ID Word: </label><input id="nameInput" type="text" onkeyup="updateUID()">
         <br>
         <span id="UIDDisplay">Your UID: <strong>0</strong></span>
