using sessionStorage and reload so dragging works on mobile

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h2>Manage Options</h2>
         <input type="text" id="optionInput" placeholder="Enter an option" onkeydown="if(event.key === 'Enter') addOption()">
         <button onclick="addOption()">Add Option</button>
+        <button onclick="clearOptions()">Clear Options</button>
         <ul id="optionsList"></ul>
         <button onclick="submitOptions()">Start Voting</button>
     </div>
